--- a/views/voter/vote.ejs
+++ b/views/voter/vote.ejs
@@ -62,14 +62,15 @@
           <!-- Supreme Student Council Section -->
           <div class="ballot ballot-ssc">
             <br />
-            <h3 class="ballot-header ballot-council">Supreme Student Council</h3>
+            <h3 class="ballot-header ballot-council">BulSU Supreme Student Council</h3>
             <br />
 
             <!-- President Candidates -->
-            <h3 class="ballot-header ballot-position">President</h3>
+            <h3 class="ballot-header ballot-position">President (1)</h3>
             <br />
             <div id="ballot-president" class="ballot-choices">
-              <% let abstainPresident = null; %> <% const filteredPresidentCandidates = presidentCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainPresident = candidate; return false; } return true; }); %> <% filteredPresidentCandidates.forEach(function(candidate, index) { %>
+              <% let abstainPresident = null; %> <% const filteredPresidentCandidates = presidentCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainPresident = candidate; return false; } return true; }); %> <%
+              filteredPresidentCandidates.forEach(function(candidate, index) { %>
               <div class="label-container label-president">
                 <input class="ballot-choice candidate-radio" data-group="president" id="president-<%= index %>" type="radio" name="president" value="<%= JSON.stringify(candidate) %>" />
                 <label class="ballot-tile" for="president-<%= index %>">
@@ -91,10 +92,11 @@
             <br />
 
             <!-- Vice President Candidates -->
-            <h3 class="ballot-header ballot-position">Vice President</h3>
+            <h3 class="ballot-header ballot-position">Vice President (1)</h3>
             <br />
             <div id="ballot-vice-president" class="ballot-choices">
-              <% let abstainVicePresident = null; %> <% const filteredVicePresidentCandidates = vicePresidentCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainVicePresident = candidate; return false; } return true; }); %> <% filteredVicePresidentCandidates.forEach(function(candidate, index) { %>
+              <% let abstainVicePresident = null; %> <% const filteredVicePresidentCandidates = vicePresidentCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainVicePresident = candidate; return false; } return true; }); %> <%
+              filteredVicePresidentCandidates.forEach(function(candidate, index) { %>
               <div class="label-container label-vice-president">
                 <input class="ballot-choice candidate-radio" data-group="vicePresident" id="vice-president-<%= index %>" type="radio" name="vicePresident" value="<%= JSON.stringify(candidate) %>" />
                 <label class="ballot-tile" for="vice-president-<%= index %>">
@@ -115,9 +117,10 @@
             <br />
 
             <!-- Senator Candidates -->
-            <h3 class="ballot-header ballot-position">Senators</h3>
+            <h3 class="ballot-header ballot-position">Senators (7)</h3>
             <div id="ballot-senator" class="ballot-choices">
-              <% let abstainSenator = null; %> <% const filteredSenatorCandidates = senatorCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainSenator = candidate; return false; } return true; }); %> <% filteredSenatorCandidates.forEach(function(candidate, index) { %>
+              <% let abstainSenator = null; %> <% const filteredSenatorCandidates = senatorCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainSenator = candidate; return false; } return true; }); %> <% filteredSenatorCandidates.forEach(function(candidate,
+              index) { %>
               <div class="label-container label-senator">
                 <input class="ballot-choice candidate-radio" data-group="senator" id="senator-<%= index %>" type="checkbox" name="senator" value="<%= JSON.stringify(candidate) %>" />
                 <label class="ballot-tile" for="senator-<%= index %>">
@@ -142,10 +145,11 @@
             <br /><br />
 
             <!-- Governor Candidates -->
-            <h3 class="ballot-header ballot-position">Governor</h3>
+            <h3 class="ballot-header ballot-position">Governor (1)</h3>
             <br />
             <div id="ballot-governor" class="ballot-choices">
-              <% let abstainGovernor = null; %> <% const filteredGovernorCandidates = governorCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainGovernor = candidate; return false; } return true; }); %> <% filteredGovernorCandidates.forEach(function(candidate, index) { %>
+              <% let abstainGovernor = null; %> <% const filteredGovernorCandidates = governorCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainGovernor = candidate; return false; } return true; }); %> <%
+              filteredGovernorCandidates.forEach(function(candidate, index) { %>
               <div class="label-container label-governor">
                 <input class="ballot-choice candidate-radio" data-group="governor" id="governor-<%= index %>" type="radio" name="governor" value="<%= JSON.stringify(candidate) %>" />
                 <label class="ballot-tile" for="governor-<%= index %>">
@@ -166,10 +170,11 @@
             <br />
 
             <!-- Vice Governor Candidates -->
-            <h3 class="ballot-header ballot-position">Vice Governor</h3>
+            <h3 class="ballot-header ballot-position">Vice Governor (1)</h3>
             <br />
             <div id="ballot-vice-governor" class="ballot-choices">
-              <% let abstainViceGovernor = null; %> <% const filteredViceGovernorCandidates = viceGovernorCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainViceGovernor = candidate; return false; } return true; }); %> <% filteredViceGovernorCandidates.forEach(function(candidate, index) { %>
+              <% let abstainViceGovernor = null; %> <% const filteredViceGovernorCandidates = viceGovernorCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainViceGovernor = candidate; return false; } return true; }); %> <%
+              filteredViceGovernorCandidates.forEach(function(candidate, index) { %>
               <div class="label-container label-vice-governor">
                 <input class="ballot-choice candidate-radio" data-group="viceGovernor" id="vice-governor-<%= index %>" type="radio" name="viceGovernor" value="<%= JSON.stringify(candidate) %>" />
                 <label class="ballot-tile" for="vice-governor-<%= index %>">
@@ -190,10 +195,11 @@
             <br />
 
             <!-- Board Member Candidates -->
-            <h3 class="ballot-header ballot-position">Board Member</h3>
+            <h3 class="ballot-header ballot-position">Board Member (1)</h3>
             <br />
             <div id="ballot-board-member" class="ballot-choices">
-              <% let abstainBoardMember = null; %> <% const filteredBoardCandidates = boardCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainBoardMember = candidate; return false; } return true; }); %> <% filteredBoardCandidates.forEach(function(candidate, index) { %>
+              <% let abstainBoardMember = null; %> <% const filteredBoardCandidates = boardCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainBoardMember = candidate; return false; } return true; }); %> <%
+              filteredBoardCandidates.forEach(function(candidate, index) { %>
               <div class="label-container label-board-member">
                 <input class="ballot-choice candidate-radio" data-group="boardMember" id="board-member-<%= index %>" type="radio" name="boardMember" value="<%= JSON.stringify(candidate) %>" />
                 <label class="ballot-tile" for="board-member-<%= index %>">
@@ -226,7 +232,9 @@
                   <div class="folder">
                     <div class="top">
                       <svg viewBox="0 0 24 27">
-                        <path d="M1,0 L23,0 C23.5522847,-1.01453063e-16 24,0.44771525 24,1 L24,8.17157288 C24,8.70200585 23.7892863,9.21071368 23.4142136,9.58578644 L20.5857864,12.4142136 C20.2107137,12.7892863 20,13.2979941 20,13.8284271 L20,26 C20,26.5522847 19.5522847,27 19,27 L1,27 C0.44771525,27 6.76353751e-17,26.5522847 0,26 L0,1 C-6.76353751e-17,0.44771525 0.44771525,1.01453063e-16 1,0 Z"></path>
+                        <path
+                          d="M1,0 L23,0 C23.5522847,-1.01453063e-16 24,0.44771525 24,1 L24,8.17157288 C24,8.70200585 23.7892863,9.21071368 23.4142136,9.58578644 L20.5857864,12.4142136 C20.2107137,12.7892863 20,13.2979941 20,13.8284271 L20,26 C20,26.5522847 19.5522847,27 19,27 L1,27 C0.44771525,27 6.76353751e-17,26.5522847 0,26 L0,1 C-6.76353751e-17,0.44771525 0.44771525,1.01453063e-16 1,0 Z"
+                        ></path>
                       </svg>
                     </div>
                     <div class="paper"></div>
