--- a/public/css/home.css
+++ b/public/css/home.css
@@ -184,3 +184,9 @@
   color: var(--color-lightRed);
   background: #f5ab29;
 }
+
+#get-ready-to-register,
+.waiting-text {
+  font-size: 1.5rem;
+  margin-top: 3rem;
+}
