--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -113,7 +113,7 @@
             </a>
           </li>
           <hr />
-          <li>
+          <li id="active-tab">
             <a href="/dashboard">
               <i class="bx bxs-dashboard"></i>
               <span class="link_name">Dashboard</span>
@@ -488,7 +488,7 @@
     </script>
 
     <script src="admin/js/sidebar.js"></script>
-    <script src="admin/js/index_admin.js"></script>
+    <script src="admin/js/index-admin.js"></script>
     <!-- <script>
       // Ensure currentPeriod exists to avoid errors
       if (!electionConfig.currentPeriod) {
@@ -498,6 +498,7 @@
       document.getElementById("currentPeriodDisplay").innerText = electionConfig.currentPeriod.name;
       document.getElementById("currentPeriodDuration").innerText = electionConfig.currentPeriod.duration;
     </script> -->
-    <script src="admin/js/dropdown.js"></script>
+    <script src="admin/js/index-admin.js"></script>
+    <script src="js/dropdown.js"></script>
   </body>
 </html>
