--- a/public/admin/css/index-admin.css
+++ b/public/admin/css/index-admin.css
@@ -298,10 +298,14 @@ h6 {
   margin-top: -1.1rem;
 }
 
+.dropdown:hover {
+  cursor: pointer;
+}
+
 .dropdown-line {
   border: none;
   width: 85%;
-  height: 0.1rem;
+  height: 0.08em;
   background-color: #423a2c;
 
   opacity: 60%;
@@ -316,8 +320,8 @@ h6 {
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
   z-index: 1;
   border-radius: 0.5rem;
-  margin-top: 12.5%;
-  margin-right: 2.5%;
+  margin-top: 11.5%;
+  margin-right: -3%;
   padding: 0.5rem;
 }
 
