--- a/public/voter/css/index-voter.css
+++ b/public/voter/css/index-voter.css
@@ -177,43 +177,70 @@ button {
   color: #e1ae5b;
 }
 
-button.dropdown-toggle {
-  background: none;
-  border: none;
-  outline: none;
-  padding: 0;
-  margin: 0;
-  cursor: pointer;
-}
-
 /* Dropdown menu styles */
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
 
 .settings i {
   margin: 0.2rem;
 }
 
+.settings {
+  display: flex;
+  flex-direction: row;
+  /* border: 1px solid black; */
+}
+/* dropdown */
+
+.dropdown {
+  width: 0;
+  height: 0;
+  border-left: 0.62rem solid transparent;
+  border-right: 0.62rem solid transparent;
+  border-top: 0.63rem solid #e1ae5b;
+  display: inline-block;
+  margin-left: 0.4rem;
+  margin-top: 1.1rem;
+}
+
+.dropdown:hover {
+  cursor: pointer;
+}
+
+.dropdown-line {
+  border: none;
+  width: 85%;
+  height: 0.08em;
+  background-color: #423a2c;
+
+  opacity: 60%;
+  margin: 0 auto;
+}
+/* Dropdown Menu (initially hidden) */
 .dropdown-menu {
   display: none;
   position: absolute;
-  top: 90%;
-  left: 0;
   background-color: #e1ae5b;
-  border: 1px solid #ddd;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 8px 0;
-  z-index: 10;
+  width: 15%;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  border-radius: 0.5rem;
+  margin-top: 3%;
+  margin-left: -10%;
+  padding: 0.5rem;
 }
 
+/* Style for the links inside the dropdown */
 .dropdown-menu a {
-  display: block;
-  padding: 8px 16px;
-  color: #333;
+  color: #480404;
+  padding: 0.7rem 2rem;
   text-decoration: none;
-  white-space: nowrap;
+  display: block;
+  font-weight: 500;
+  font-size: 1rem;
+}
+
+.dropdown-menu a:hover {
+  color: #a60212;
+  font-weight: bold;
 }
 
 /* .dropdown-menu a:hover {
