fixed admin header and sidebar

--- a/views/admin/blockchain-management.ejs
+++ b/views/admin/blockchain-management.ejs
@@ -144,7 +144,7 @@
             </ul>
           </li>
 
-          <li>
+          <li id="active-tab">
             <div class="icon-link">
               <a href="/blockchain-management">
                 <i class="fa fa-link"></i>
@@ -154,7 +154,7 @@
             </div>
             <ul class="sub-menu">
               <li><a class="link_name" href="/blockchain-management">Blockchain</a></li>
-              <li><a href="/blockchain-management">Blockchain Management</a></li>
+              <li id="active-sub"><a href="/blockchain-management">Blockchain Management</a></li>
               <li><a href="/blockchain-activity-log">Activity Log</a></li>
             </ul>
           </li>
