--- a/views/admin/election-results.ejs
+++ b/views/admin/election-results.ejs
@@ -14,10 +14,11 @@
     <!-- <link rel="stylesheet" type="text/css" href="admin/dependencies/liner-bar.css" /> -->
 
     <!-- Boxicons CDN Link -->
+
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=upins:wght@400;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=upins:wght@400;700&display=swap" rel="stylesheet" />
   </head>
 
   <body>
@@ -172,8 +173,8 @@
               <li><a class="link_name" href="/voter-info"><%= electionConfig.electionName || "No Election Ongoing" %></a></li>
               <li><a href="/voter-info">Voter Info</a></li>
               <li><a href="/voter-turnout">Voter Turnout</a></li>
-              <li><a href="/vote-tally" id="active-sub">Vote Tally</a></li>
-              <li><a href="/results">Results</a></li>
+              <li><a href="/vote-tally">Vote Tally</a></li>
+              <li><a href="/results" id="active-sub">Results</a></li>
               <li><a href="/reset">Reset Election</a></li>
             </ul>
           </li>
@@ -210,8 +211,8 @@
       <main class="main">
         <div class="title-container">
           <div class="r">
-            <i class="fas fa-list-ol"></i>
-            <h1 class="title">Vote Tally</h1>
+            <i class="fa fa-bar-chart" aria-hidden="true"></i>
+            <h1 class="title">Election Results</h1>
           </div>
         </div>
         <hr class="title-line" />
