--- a/views/admin/election-vote-tally.ejs
+++ b/views/admin/election-vote-tally.ejs
@@ -30,9 +30,9 @@
       }
     </style>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=upins:wght@400;700&display=swap" rel="stylesheet" />
   </head>
 
@@ -368,7 +368,8 @@
               <!-- Board Member Container -->
               <div class="container-lsc" id="container-lsc-board-member">
                 <h1>Board Member</h1>
-                <% let boardMembersByProgram = {}; candidates .filter(candidate => candidate.position === 'board member' && candidate.college && candidate.program) .forEach(candidate => { if (!boardMembersByProgram[candidate.program]) { boardMembersByProgram[candidate.program] = []; } boardMembersByProgram[candidate.program].push(candidate); }); %> <% Object.keys(boardMembersByProgram).forEach(program => { %>
+                <% let boardMembersByProgram = {}; candidates .filter(candidate => candidate.position === 'board member' && candidate.college && candidate.program) .forEach(candidate => { if (!boardMembersByProgram[candidate.program]) { boardMembersByProgram[candidate.program] = []; }
+                boardMembersByProgram[candidate.program].push(candidate); }); %> <% Object.keys(boardMembersByProgram).forEach(program => { %>
                 <h3 class="program-header"><%= program %></h3>
                 <% boardMembersByProgram[program].forEach(candidate => { %>
                 <div class="candidate lsc-candidate" data-college="<%= candidate.college %>" data-program="<%= candidate.program %>">
